--- a/personal/css/default.css
+++ b/personal/css/default.css
@@ -1,15 +1,21 @@
+@import url('https: //fonts.googleapis.com/css2?family=lora&family=Poppins&family=Source+Pro&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
+* {
+	margin:  0;
+	padding: 0;
+	box-sizing:  border-box;
+}
+
+html {
+	height: 100%;
+	width:  100%;
+}
 
 body {
-	background-color: #f5f5dc;
 	overflow-x: hidden;
+	overflow-y: auto;
 }
 
-nav > a {
+a {
 	text-decoration: none;
-}
-
-nav > a: visited {
-	color: white;
 }
